Fix roadmap overflow and positioning

--- a/web/assets/css/color-8.css
+++ b/web/assets/css/color-8.css
@@ -5044,7 +5044,6 @@ html * {
 
 html, body {
     min-height: 100%;
-    overflow-x: hidden
 }
 
 body {
